<resources>
    <string name="app_name">homework_5</string>
    <string name="title">photo</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="test_name">\@pawel_czerwinski</string>
    <string name="test_username">Pawel Czerwinski</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="policy">By signing up, you agree to Photo’s <u>Terms of Service</u> and <u>Privacy Policy</u>.</string>
    <string name="enter_correct_email">Enter Correct Email</string>
    <string name="enter_more_than_6_character">Enter more than 6 character</string>
    <string name="enter_all_field">Enter All Field</string>
    <string name="enter_correct_email_and_password">Enter Correct Email and Password</string>
</resources>