<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingVertical="40dp"
    android:paddingHorizontal="20dp"
    android:orientation="vertical"
    tools:context=".RegisterFirstActivity">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:src="@drawable/back_icon"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        app:fontFamily="@font/comfortaa"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:text="@string/register"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/register_input_border"
        android:padding="10dp"
        android:textColor="@color/black"
        android:maxLines="1"
        android:hint="@string/email"
        android:textColorHint="@color/hint_color"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/register_input_border"
        android:padding="10dp"
        android:textColor="@color/black"
        android:maxLines="1"
        android:hint="@string/password"
        android:textColorHint="@color/hint_color"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/next"
        android:textAllCaps="true"
        android:background="@drawable/register_button" />


</androidx.appcompat.widget.LinearLayoutCompat>