<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/image_bg"
        android:orientation="vertical"
        android:gravity="center">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:gravity="center">
                <ImageView
                    android:layout_width="49dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/union"
                    android:contentDescription="@string/todo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="36sp"
                    android:fontFamily="@font/comfortaa"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingHorizontal="20dp"
                android:gravity="center"
                android:layout_gravity="start">


                <androidx.cardview.widget.CardView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:cardCornerRadius="400dp">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/user_image"
                        />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        app:fontFamily="@font/roboto"
                        android:textFontWeight="700"
                        android:textSize="13sp"
                        android:text="@string/test_username"
                        tools:ignore="UnusedAttribute" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        app:fontFamily="@font/roboto"
                        android:textSize="11sp"
                        android:text="@string/test_name"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="7">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/log_in_btn"
            android:contextClickable="false"
            android:fontFamily="@font/roboto"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

        <Space
            android:layout_width="10dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:cornerRadius="6dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintButtonSize" />


    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>





